src/renderers/snapshots/scrut__renderers__diff__tests__json_schema_failed_invalid_json.snap
---
source: src/renderers/diff.rs
assertion_line: 739
expression: rendered
---
--- the location
+++ the location.new
# ---- JSON SCHEMA VALIDATION FAILED ----
# PATH:  the location
# TITLE: the title
# KIND:  InvalidJson
# ERROR: command output is not valid JSON: expected value
# OUTPUT:
# {"foo": "bar"}
# ---- JSON SCHEMA VALIDATION FAILED ----

