src/renderers/snapshots/scrut__renderers__diff__tests__json_schema_failed_validation_errors.snap
---
source: src/renderers/diff.rs
assertion_line: 739
expression: rendered
---
--- the location
+++ the location.new
# ---- JSON SCHEMA VALIDATION FAILED ----
# PATH:  the location
# TITLE: the title
# KIND:  ValidationErrors
# ERROR: "other" is a required property
# ERROR: "foo" is not of type "integer"
# OUTPUT:
# {"foo": "bar"}
# ---- JSON SCHEMA VALIDATION FAILED ----

