src/renderers/snapshots/scrut__renderers__diff__tests__malformed_output_missing_markdown.snap
---
source: src/renderers/diff.rs
assertion_line: 348
expression: rendered
---
--- the location
+++ the location.new
@@ -236 +236,0 @@ malformed output: the title
-expected line 2

